--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body,td,th,p{
 	color: #333;
 	line-height: 1.5;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, map {
   display: block;
 }
 *, *::after, *::before {
@@ -124,6 +124,11 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
+map {
+  width: 100%;
+  height: auto;
+  margin:0;
+}
 #map {
   height: 400px;
   width: 100%;
