--- a/css/styles.css
+++ b/css/styles.css
@@ -193,9 +193,7 @@ map {
   display: block;
   margin: 0;
   width: 100%;
- /* min-height: 248px;
-  min-width: 100%;
-  */
+
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -550,4 +548,4 @@ label {
   line-height: 1.1;
 }
 
-
+}
