--- a/css/form.css
+++ b/css/form.css
@@ -1,9 +1,9 @@
 form {
-    width: 60%;
+    width: 100%;
     padding: 1em;
     margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
     height: auto;
     }
     legend {
