--- a/css/styles.css
+++ b/css/styles.css
@@ -1,55 +1,90 @@
 @charset "utf-8";
 /* CSS Document */
-html, body, main {
-   height: 100%;
+
+html,
+body,
+main {
+  height: 100%;
 }
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+
+body,
+td,
+th,
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
+  line-height: 1.5;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, form {
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+form {
   display: block;
 }
-*, *::after, *::before {
+
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
+
 map,
-img, 
+img,
 embed,
 object,
 video {
-  max-width:100%;
+  max-width: 100%;
 }
-body {
 
-	background-color: #fdfdfd;
-	margin: 0;
-	display: grid;
+body {
+  background-color: #fdfdfd;
+  margin: 0;
+  display: grid;
   grid-gap: 10px;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr auto 1fr;
   justify-content: center;
+}
 
+ul,
+li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-}
+
 a {
-	color: orange;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
-a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+
+a:hover,
+a:focus {
+  color: #3397db;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+  border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
@@ -58,8 +93,8 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #f3f3f3;
   min-height: 100%;
   /* min-height: 100%; */
-
 }
+
 #footer {
   flex-shrink: 0;
   width: 100%;
@@ -72,18 +107,22 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
+
 nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
+
 nav h1 {
   margin: auto;
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 nav h1 a {
   color: #fff;
   font-size: 14pt;
@@ -91,50 +130,60 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: 100%;
+  padding: 10px 40px 16px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 17px;
+  margin: 0;
+  width: 100%;
 }
 
 /* Display list items side by side */
+
 #breadcrumb li {
-    display: inline;
+  display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
+
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
+
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #0275d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
+
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
+
 map {
   width: 100%;
   height: auto;
-  margin:0;
+  margin: 0;
 }
+
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
   width: 100%;
   height: 100%;
@@ -143,8 +192,8 @@ map {
   justify-content: center;
   display: flex;
   flex-wrap: wrap;
-
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
@@ -152,10 +201,11 @@ map {
   line-height: 1;
   margin: 0 20px;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -165,10 +215,11 @@ map {
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin:0;
+  margin: 0;
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
@@ -177,27 +228,29 @@ map {
   padding: 30px 15px 60px;
   text-align: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin:0;
+  font-family: Arial, sans-serif;
+  margin: 0;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
   /*width: 270px; */
   min-width: 270px;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   width: 100%;
-
 }
+
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -205,10 +258,12 @@ map {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
+
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
@@ -223,12 +278,14 @@ map {
 }
 
 /* ====================== Restaurant Details ====================== */
+
 .inside header {
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 100%;
@@ -237,20 +294,21 @@ map {
   top: 80px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   width: 50%;
-  
-  
 }
+
 .inside #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -261,7 +319,7 @@ map {
 
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -269,14 +327,17 @@ map {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 100%;
+  width: 100%;
   margin: 10px;
 }
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -287,18 +348,23 @@ map {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 100%;
+  width: 100%;
 }
-#restaurant-container, #reviews-container, #comment {
+
+#restaurant-container,
+#reviews-container,
+#comment {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 50px 40px 30px;
   width: 50%;
   margin: 10px;
 }
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -306,11 +372,12 @@ map {
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
-
 }
+
 #reviews-list li {
   background-color: #fff;
   border: 2px solid #f3f3f3;
@@ -322,9 +389,11 @@ map {
   position: relative;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
 }
@@ -332,16 +401,14 @@ map {
 /* ====================== Form ====================== */
 
 form {
-  width: 50%;
-  padding: 1em;
+  width: 100%;
+  padding: 0.8em;
   margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0;
+  margin-right: 0;
   height: auto;
 }
-fieldset{
-  width:80%; 
-}
+
 legend {
   border: 1px solid #dcdcdc;
   border-radius: 10px;
@@ -349,203 +416,207 @@ legend {
   text-align: left;
   text-transform: uppercase;
 }
-button {
-    height: 45px;
-    padding: 10px 24px;
-    border-radius: 12px;
-    text-align: center;
-    font-size: 16px;
-    text-shadow: 0px 1px 1px #ffffff;
-    border-bottom: 2px solid #b2b2b2;
-  }
-  
-label {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 1xp;
-    padding: 2x;
-  }
-  #stars {
-    display: inline-flex;
-  }
-  
-  input {
-    height: 30px;
-    border-radius: 5px;
-    padding: 5px 5px 5px 30px;
-  }
-  input:focus {
-  background-color: #ffffff;
-  border: 1px solid #b1e1e4;
-  }
-  .title {
-    margin-left: 10px;
-  }
-  fieldset {
-    margin: 0;
-    padding: 1em;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 5px;
-    height : 300px;
-    width: 450px;
-    border: 1px solid #dcdcdc;
-    border-radius: 10px;
-    padding: 20px;
-  
-   }
-  
-  .comments {
-    width: 50%;
-   
-  }
-  
-  #stars > input { 
-    display: none;
-  } 
-  #stars {
-    direction: rtl;
-    text-align: center;
-    width: 100px;
-    border: 0;
-    font-size: 0;
-  }
-  
-  #stars label {
-    font-size: 16px;
-    font-size: 1.5rem;
-    line-height: 24px; 
-    line-height: 2rem;
-    position: relative;
-    text-align: center;
-    width: 1em;
-    height: 1em;
-  }
-  #stars label:before {
-     content: "☆";
-     position: absolute;
-     margin: 0;
-     text-indent: 0;
-     line-height: 1em;
-     color: #aaa;
-  }
-  #stars label:hover:before,
-  #stars label:hover ~ label:before,
-  #stars input:checked ~ label:before {
-     content: "★";
-     color: #ffbb04;
-  }
-  #stars label:active {
-   color: #ccc;
-    top: 1px;
-  }
-  
 
-  #favorite {
-    margin: 0;
-    width: 10%;
-    height:16px;
+button {
+  height: 50px;
+  padding: 5px 10px;
+  border: 2px solid #b2b2b2;
+  border-radius: 12px;
+  text-align: center;
+  font-size: 16px;
+  text-shadow: 0px 1px 1px #ffffff;
+}
+label,
+input,
+textarea {
+  font: 1.3em sans-serif;
+}
+textarea {
+  width: 96%;
+  margin-top: 10px;
+
+}
+input {
+  width: 50%;
+  height: 50px;
+  margin: .5rem 0;
+  padding: .5rem;
+  border-radius: 5px;
+  padding: 5px 5px 5px 30px;
+  font-size: 120%;
+  color: #5a5854;
+  background-color: #f2f2f2;
+  border: 1px solid #bdbdbd;
+  
 }
 
+label {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 1xp;
+  padding: 2x;
+}
 
+#stars {
+  display: inline-flex;
+}
 
+input:focus {
+  background-color: #ffffff;
+  border: 1px solid #b1e1e4;
+}
 
+.title {
+  margin-left: 10px;
+}
+
+fieldset {
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5px;
+  height: 400px;
+  width: 90%;
+  border: 1px solid #dcdcdc;
+  border-radius: 10px;
+  /* padding: 30px; */
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#stars>input {
+  display: none;
+}
+
+#stars {
+  direction: rtl;
+  text-align: center;
+  width: 100px;
+  border: 0;
+  font-size: 0;
+}
+
+#stars label {
+  font-size: 16px;
+  font-size: 1.5rem;
+  line-height: 24px;
+  line-height: 2rem;
+  position: relative;
+  text-align: center;
+  width: 1em;
+  height: 1em;
+}
+
+#stars label:before {
+  content: "☆";
+  position: absolute;
+  margin: 0;
+  text-indent: 0;
+  line-height: 1em;
+  color: #aaa;
+}
+
+#stars label:hover:before,
+#stars label:hover~label:before,
+#stars input:checked~label:before {
+  content: "★";
+  color: #ffbb04;
+}
+
+#stars label:active {
+  color: #ccc;
+  top: 1px;
+}
+
+.submit {
+  width: 92%;
+  margin: 0 auto;
+}
+
+#favorite {
+  margin: 0;
+  width: 10%;
+  height: 16px;
+}
 
 /* ====================== Media Queries====================== */
 
-@media (max-width: 640px){
- .inside {
-  background-color: #fdfdfd;
-  margin: 0;
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr auto 1fr;
-  grid-template-areas: 
-  "header"
-  "content"
-  "footer";
-  justify-content: center;
- } 
- .inside #header {
-  grid-area: header;
- }
-
- .inside #maincontent {
-  grid-area: content;
-  border-top: 132px; 
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr auto;
-  grid-template-areas: 
-  "restaurant-map"
-  "restaurant-contents"
-  "restaurant-reviews";
-  
-  justify-content: center;
-  align-items: center;
- }
- 
-
- .inside #map-container{
-  grid-area: restaurant-map;
-  background: blue none repeat scroll 0 0;
-  position: absolute;
-  height: 41%;
-  right: 0;
-  top: 132px;
-  width: 100%;
- }
-
- .inside #restaurant-container{
-  grid-area: restaurant-contents;
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 50px 40px 30px;
-  width: 100%;
-  margin:0;
- }
- .inside #footer {
-  grid-area: footer;
-  bottom: 0;
-  width: 100%;
- }
- 
- .inside #reviews-container{
-  grid-area: restaurant-reviews;
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 50px 40px 30px;
-  width: 100%;
-  margin: 0;
- }
-
-
-#breadcrumb {
+@media (max-width: 640px) {
+  .inside {
+    background-color: #fdfdfd;
+    margin: 0;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr auto 1fr;
+    grid-template-areas: "header" "content" "footer";
+    justify-content: center;
+  }
+  .inside #header {
+    grid-area: header;
+  }
+  .inside #maincontent {
+    grid-area: content;
+    border-top: 132px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr auto;
+    grid-template-areas: "restaurant-map" "restaurant-contents" "restaurant-reviews";
+    justify-content: center;
+    align-items: center;
+  }
+  .inside #map-container {
+    grid-area: restaurant-map;
+    background: blue none repeat scroll 0 0;
+    position: absolute;
+    height: 41%;
+    right: 0;
+    top: 132px;
+    width: 100%;
+  }
+  .inside #restaurant-container {
+    grid-area: restaurant-contents;
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 50px 40px 30px;
+    width: 100%;
+    margin: 0;
+  }
+  .inside #footer {
+    grid-area: footer;
+    bottom: 0;
+    width: 100%;
+  }
+  .inside #reviews-container {
+    grid-area: restaurant-reviews;
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #fff;
+    padding: 50px 40px 30px;
+    width: 100%;
+    margin: 0;
+  }
+  #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
     width: 100%;
-}
-.inside #map {
-  background-color: #ccc;
-   width: 100%;
-}
-
-.inside #restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 25px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
-}
-
+  }
+  .inside #map {
+    background-color: #ccc;
+    width: 100%;
+  }
+  .inside #restaurant-name {
+    color: #f18200;
+    font-family: Arial, sans-serif;
+    font-size: 20pt;
+    font-weight: 200;
+    letter-spacing: 0;
+    margin: 25px 0 30px;
+    text-transform: uppercase;
+    line-height: 1.1;
+  }
 }
