--- a/css/styles.css
+++ b/css/styles.css
@@ -352,13 +352,18 @@ map {
 }
 
 #restaurant-container,
-#reviews-container,
-#comment {
+#reviews-container{
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 50px 40px 30px;
   width: 50%;
   margin: 10px;
+}
+
+#comment {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  width: 50%;
 }
 
 #reviews-container {
@@ -434,10 +439,10 @@ textarea {
 textarea {
   width: 96%;
   margin-top: 10px;
-
 }
+
 input {
-  width: 50%;
+  width: 200px;
   height: 50px;
   margin: .5rem 0;
   padding: .5rem;
@@ -447,14 +452,11 @@ input {
   color: #5a5854;
   background-color: #f2f2f2;
   border: 1px solid #bdbdbd;
-  
 }
 
 label {
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-right: 1xp;
-  padding: 2x;
 }
 
 #stars {
@@ -476,11 +478,10 @@ fieldset {
   flex-direction: column;
   justify-content: center;
   margin-top: 5px;
-  height: 400px;
+  height: 500px;
   width: 90%;
   border: 1px solid #dcdcdc;
   border-radius: 10px;
-  /* padding: 30px; */
   margin-right: auto;
   margin-left: auto;
 }
@@ -543,80 +544,114 @@ fieldset {
 /* ====================== Media Queries====================== */
 
 @media (max-width: 640px) {
-  .inside {
-    background-color: #fdfdfd;
-    margin: 0;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto 1fr;
-    grid-template-areas: "header" "content" "footer";
-    justify-content: center;
-  }
-  .inside #header {
-    grid-area: header;
-  }
-  .inside #maincontent {
-    grid-area: content;
-    border-top: 132px;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr auto;
-    grid-template-areas: "restaurant-map" "restaurant-contents" "restaurant-reviews";
-    justify-content: center;
-    align-items: center;
-  }
-  .inside #map-container {
-    grid-area: restaurant-map;
-    background: blue none repeat scroll 0 0;
-    position: absolute;
-    height: 41%;
-    right: 0;
-    top: 132px;
-    width: 100%;
-  }
-  .inside #restaurant-container {
-    grid-area: restaurant-contents;
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 50px 40px 30px;
-    width: 100%;
-    margin: 0;
-  }
-  .inside #footer {
-    grid-area: footer;
-    bottom: 0;
-    width: 100%;
-  }
-  .inside #reviews-container {
-    grid-area: restaurant-reviews;
-    border-bottom: 1px solid #d9d9d9;
-    border-top: 1px solid #fff;
-    padding: 50px 40px 30px;
-    width: 100%;
-    margin: 0;
-  }
-  #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: 100%;
-  }
-  .inside #map {
-    background-color: #ccc;
-    width: 100%;
-  }
-  .inside #restaurant-name {
-    color: #f18200;
-    font-family: Arial, sans-serif;
-    font-size: 20pt;
-    font-weight: 200;
-    letter-spacing: 0;
-    margin: 25px 0 30px;
-    text-transform: uppercase;
-    line-height: 1.1;
-  }
+      .inside {
+        background-color: #fdfdfd;
+        margin: 0;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto 1fr;
+        grid-template-areas: "header" "content" "footer";
+        justify-content: center;
+      }
+      .inside #header {
+        grid-area: header;
+      }
+      .inside #maincontent {
+        grid-area: content;
+        border-top: 132px;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 2fr auto 1fr;
+        grid-template-areas:
+        "restaurant-map" 
+        "restaurant-contents"
+        "restaurant-reviews"
+        "comment";
+        justify-content: center;
+        align-items: center;
+      }
+
+      .inside  #map-container,
+      .inside  #restaurant-container,
+      .inside  #comment,
+      .inside  #reviews-container,
+      .inside #map,
+      .inside #footer{
+        width: 100%;
+        margin: 0;
+      }
+      .inside #map-container {
+        grid-area: restaurant-map;
+        background: blue none repeat scroll 0 0;
+        position: absolute;
+        height: 41%;
+        right: 0;
+        top: 132px;
+      }
+
+      .inside #restaurant-container {
+        grid-area: restaurant-contents;
+        border-bottom: 1px solid #d9d9d9;
+        border-top: 1px solid #fff;
+        padding: 50px 40px 30px;
+      }
+
+      .inside #footer {
+        grid-area: footer;
+        bottom: 0;
+      }
+
+      .inside #reviews-container {
+        grid-area: restaurant-reviews;
+        border-bottom: 1px solid #d9d9d9;
+        border-top: 1px solid #fff;
+        padding: 50px 40px 30px;
+        margin: 0;
+      }
+      #breadcrumb {
+        padding: 10px 40px 16px;
+        list-style: none;
+        background-color: #eee;
+        font-size: 17px;
+        margin: 0;
+      }
+      .inside #map {
+        background-color: #ccc;
+      }
+      .inside #restaurant-name {
+        color: #f18200;
+        font-family: Arial, sans-serif;
+        font-size: 20pt;
+        font-weight: 200;
+        letter-spacing: 0;
+        margin: 25px 0 30px;
+        text-transform: uppercase;
+        line-height: 1.1;
+      }
+
+      .inside #comment {
+        grid-area: comment;
+        border-bottom: 1px solid #d9d9d9;
+        border-top: 1px solid #fff;
+        padding: 10px 40px 30px;
+        margin: 0;
+      }
+
+        
+      fieldset {
+        padding: 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 5px;
+        height: 500px;
+        width: 100%;
+        margin-right:0;
+        margin-left:0;
+      }
+      .title {
+        margin-left: 0;
+      }
 }
