--- a/css/styles.css
+++ b/css/styles.css
@@ -360,12 +360,6 @@ map {
   margin: 10px;
 }
 
-#comment {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  width: 50%;
-}
-
 #reviews-container {
   padding: 30px 40px 80px;
 }
@@ -408,7 +402,6 @@ map {
 form {
   width: 100%;
   padding: 0.8em;
-  margin-top: 20px;
   margin-left: 0;
   margin-right: 0;
   height: auto;
@@ -431,6 +424,13 @@ button {
   font-size: 16px;
   text-shadow: 0px 1px 1px #ffffff;
 }
+
+#comment {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  width: 50%;
+}
+
 label,
 input,
 textarea {
@@ -450,7 +450,7 @@ input {
   padding: 5px 5px 5px 30px;
   font-size: 120%;
   color: #5a5854;
-  background-color: #f2f2f2;
+  background-color: #fff;
   border: 1px solid #bdbdbd;
 }
 
