--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ td,
 th,
 p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 1em;
   color: #333;
   line-height: 1.5;
 }
@@ -60,7 +60,7 @@ body {
 ul,
 li {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 1em;
   color: #333;
 }
 
@@ -101,7 +101,7 @@ h6 {
   height: 80px;
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 1em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -125,7 +125,7 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1em;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -135,7 +135,7 @@ nav h1 a {
   padding: 10px 40px 16px;
   list-style: none;
   background-color: #eee;
-  font-size: 17px;
+  font-size: 1em;
   margin: 0;
   width: 100%;
 }
@@ -196,7 +196,7 @@ map {
 
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
@@ -206,7 +206,7 @@ map {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 11pt;
+  font-size: 1em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -251,7 +251,7 @@ map {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 1em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -261,7 +261,7 @@ map {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 1em;
 }
 
 #restaurants-list li a {
@@ -269,7 +269,7 @@ map {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 1em;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -309,7 +309,7 @@ map {
 .inside #restaurant-name {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 20pt;
+  font-size: 1.25em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 130px 0 30px;
@@ -320,7 +320,7 @@ map {
 #restaurant-name {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 20pt;
+  font-size: 1.25em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -334,14 +334,14 @@ map {
 }
 
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1em;
   margin: 10px 0px;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -366,7 +366,7 @@ map {
 
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 1.5em;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -434,7 +434,7 @@ button {
 label,
 input,
 textarea {
-  font: 1.3em sans-serif;
+  font: 1.1em sans-serif;
 }
 textarea {
   width: 96%;
@@ -448,7 +448,7 @@ input {
   padding: .5rem;
   border-radius: 5px;
   padding: 5px 5px 5px 30px;
-  font-size: 120%;
+  font-size: 1em;
   color: #5a5854;
   background-color: #fff;
   border: 1px solid #bdbdbd;
@@ -499,9 +499,7 @@ fieldset {
 }
 
 #stars label {
-  font-size: 16px;
-  font-size: 1.5rem;
-  line-height: 24px;
+  font-size: 1em;
   line-height: 2rem;
   position: relative;
   text-align: center;
