--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,14 @@ h6 {
   margin: 0 0 20px;
 }
 
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -101,7 +109,7 @@ h6 {
   height: 80px;
   background-color: #444;
   color: #aaa;
-  font-size: 1em;
+  font-size: 1.1em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -435,7 +443,7 @@ button {
 label,
 input,
 textarea {
-  font: 1.1em sans-serif;
+  font: 1em sans-serif;
 }
 textarea {
   width: 96%;
