--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,8 @@ map {
   margin: 10px;
 }
 #favorite-container {
+  
+ padding: 10px 40px;
       
  font-size: 1em;
 }
@@ -586,6 +588,13 @@ input[type ="button"] {
   text-align: center;
   font-size: 16px;
   text-shadow: 0px 1px 1px #ffffff;               
+}
+
+
+input[type ="button"]:clicked {
+ 
+  border: 2px solid #a9821a;;
+              
 }
 
 #favorite {
